name:           snaplet-oauth2
version:        0.1
synopsis:       OAuth 2 authentication for Snap applications
description:    This snaplet contains support for authentication via the 2nd
                version of the OAuth protocol.
license:        BSD3
author:         Oliver Charles
maintainer:     ollie@ocharles.org.uk
build-type:     Simple
cabal-version:  >= 1.6
homepage:       https://github.com/ocharles/snaplet-oauth2
category:       Web

source-repository head
  type:     git
  location: https://github.com/ocharles/snaplet-oauth2.git

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.OAuth2

  build-depends:
    aeson                      >= 0.6.0.2 && < 0.7,
    base                       >= 4       && < 5,
    bytestring                 >= 0.9.1   && < 0.10,
    containers                 >= 0.4.2.1 && < 0.5,
    either                     >= 3.0.2   && < 3.1,
    errors                     >= 1.2.0   && < 1.3,
    mtl                        >= 2.1.1   && < 2.2,
    network                    >= 2.3     && < 2.4,
    snap                       >= 0.9     && < 0.10,
    snap-core                  >= 0.9     && < 0.10,
    text                       >= 0.11    && < 0.12,
    time                       >= 1.4     && < 1.5,
    transformers               >= 0.3     && < 0.4

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind
